; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/wasm/extr_wrap.c_loadPage.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/wasm/extr_wrap.c_loadPage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@loadPage.lastPageDoc = internal global i32* null, align 8
@loadPage.lastPageNumber = internal global i32 -1, align 4
@lastPage = common dso_local global i64 0, align 8
@ctx = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @loadPage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @loadPage(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @loadPage.lastPageNumber, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %5, %6
  br i1 %7, label %12, label %8

8:                                                ; preds = %2
  %9 = load i32*, i32** @loadPage.lastPageDoc, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = icmp ne i32* %9, %10
  br i1 %11, label %12, label %27

12:                                               ; preds = %8, %2
  %13 = load i64, i64* @lastPage, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %12
  %16 = load i32, i32* @ctx, align 4
  %17 = load i64, i64* @lastPage, align 8
  %18 = call i32 @fz_drop_page(i32 %16, i64 %17)
  br label %19

19:                                               ; preds = %15, %12
  %20 = load i32, i32* @ctx, align 4
  %21 = load i32*, i32** %3, align 8
  %22 = load i32, i32* %4, align 4
  %23 = sub nsw i32 %22, 1
  %24 = call i64 @fz_load_page(i32 %20, i32* %21, i32 %23)
  store i64 %24, i64* @lastPage, align 8
  %25 = load i32*, i32** %3, align 8
  store i32* %25, i32** @loadPage.lastPageDoc, align 8
  %26 = load i32, i32* %4, align 4
  store i32 %26, i32* @loadPage.lastPageNumber, align 4
  br label %27

27:                                               ; preds = %19, %8
  ret void
}

declare dso_local i32 @fz_drop_page(i32, i64) #1

declare dso_local i64 @fz_load_page(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
